# es_core

./: .gitignore  CMakeLists.txt  LICENSE  OSX_wrap.h  OSX_wrap.mm  README.md  SConstruct  SConstruct.Windows  bsp.vcxproj  bsp.vcxproj.filters  core.sln  core.vcxproj  core.vcxproj.filters  es_core.sln  game.cpp  game.h  game_main.cpp  game_main.h  game_render.h  head.vcxproj  head.vcxproj.filters  macosx.py  main.cpp  render.cpp  render.h  render_main.cpp  render_main.h  scene.vcxproj  scene.vcxproj.filters  template.vcxproj  template.vcxproj.filters
app_template/: game.h  render.cpp  shared_render_state.h
binaries/: README.md  core.x86_64  dylibbundler  libPocoFoundation.so.9  libSDL2-2.0.so.0  libczmq.so.1  libzmq.so.3  media.txt
binaries/core.app/Contents/Frameworks/Ogre.framework/Headers/: OgreBuildSettings.h
binaries/core.app/Contents/Frameworks/Ogre.framework/Versions/1.8.2/Headers/: OgreShaderExLinearSkinning.h
binaries/core.app/Contents/Frameworks/Ogre.framework/Versions/1.8.2/Resources/: Info.plist
binaries/core.app/Contents/MacOS/: core
binaries/core.app/Contents/Plugins/: RenderSystem_GL.dylib
binaries/core.app/Contents/libs/: libSDL2-2.0.0.dylib  libczmq.1.dylib  libzmq.3.dylib
binaries/media/materials/scripts/: es_core.material
binaries/media/models/: uptown.mesh
bsp_src/: game.cpp  game.h  render.cpp  render.h
enet/: CMakeLists.txt  enet_test.cpp
head_src/: game.cpp  game.h  render.cpp  render.h  shared_render_state.h
input_test/: game.cpp  render.cpp  shared_render_state.h
mesh_loader/: game.cpp  game.h  render.cpp  render.h  shared_render_state.h
network/: Makefile  README.md  api.h  main.cpp  test1.cpp  test2.cpp  test_shared.h
network/haskell/: README.md  foo.hs  rnd.hs  snapshot.hs  test.hs
network/knet/: CMakeLists.txt  knet_test.cpp
scene_load_src/: game.cpp  game.h  render.cpp
site_scons/: site_init.py
template_src/: game.cpp  game.h  render.cpp  render.h
